--- a/code/Sample/app/src/main/res/layout/activity_main.xml
+++ b/code/Sample/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffffff"
-    tools:context="com.sample.MainActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+    </ListView>
 
-        <com.sample.myTextView
-            android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="腾"
-            android:textColor="#000000"
-            android:background="#00ffff"
-            android:textSize="36dp" />
-
-        <com.sample.myTextView
-            android:id="@+id/icon4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00ffff"
-            android:text="@string/test"
-            android:textColor="#ff0000"
-            android:textSize="36dp" />
-
-        <com.sample.myTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00ffff"
-            android:text="@string/test1"
-            android:textColor="#ff0000"
-            android:textSize="36dp" />
-
-        <cellText.CellTextView
-            android:id="@+id/icon1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="腾讯一."
-            android:background="#ff0000"
-            android:textSize="36dp" />
-
-        <cellText.CellTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/test"
-            android:background="#ff0000"
-            android:textSize="36dp" />
-
-        <cellText.CellTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/test1"
-            android:background="#ff0000"
-            android:textSize="36dp" />
-
-
-        <fonticon.IconFontTextView
-            android:id="@+id/icon2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00ffff"
-            android:text="腾讯"
-            android:textColor="#ff0000"
-            android:textSize="36dp" />
-
-        <fonticon.IconFontTextView
-            android:id="@+id/icon3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00ffff"
-            android:text="@string/test"
-            android:textColor="#ff0000"
-            android:textSize="36dp" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
