--- a/code/Sample/app/src/main/res/layout/content_list_view_activty.xml
+++ b/code/Sample/app/src/main/res/layout/content_list_view_activty.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sample.ListViewActivty"
+    tools:context=".classLoader.getgameapp.GameAppListActivity"
     tools:showIn="@layout/activity_list_view_activty">
 
 </RelativeLayout>
