--- a/code/Sample/app/src/main/res/layout/rowlayout.xml
+++ b/code/Sample/app/src/main/res/layout/rowlayout.xml
@@ -8,6 +8,7 @@ android:layout_height="40dp">
     android:layout_width="wrap_content"
     android:layout_height="40dp"
     android:text="@+id/label"
+    android:gravity="center"
     android:textSize="32px" >
 </TextView>
 
